# bank_bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
bank_bot/: __init__.py  bot.py  bot.yaml  cc_payment.py  db.py  dialog.yaml
bank_bot/dialog/: booking.yaml  cc_choosing.yaml  fallback.yaml  making_payment.yaml  welcome.yaml
bank_bot/extensions/: __init__.py  quick_replies.py
bank_bot/macro/: cc_choosing.jinja
rasa/: config.yml
rasa/data/: nlu.yml
tests/: test_cc_payment.py  test_db.py
